[package]
name = "bitwarden-ssh-agent"
version = "0.1.0"
edition = "2021"
description = "A headless SSH agent daemon backed by a Bitwarden vault"
repository = "https://github.com/kierandrewett/bitwarden-ssh-agent"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"
indicatif = "0.18.6"
inquire = "0.9.4"
log = "0.4.33"
rpassword = "7"
rsa = "0.9"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signature = "2"
ssh-agent-lib = "0.6.0"
ssh-encoding = "0.3.0"
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa", "p256", "p384", "p521", "encryption"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
zeroize = "1.9.0"

[dev-dependencies]
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa", "p256", "p384", "p521", "encryption", "getrandom"] }
